--- a/Angular_SICDOC/sicdoc/src/app/views/login/login.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/login/login.component.html
@@ -1,5 +1,5 @@
 
-<hr />
+<!-- Template de Login -->
 <div class="container animated fadeIn fast " style="margin-top:20px, margin-left:300px">
   <!-- Loader de Carga de los Datos -->
   <div id="loader-2" *ngIf="loading == 'show'">
@@ -28,7 +28,7 @@
 				<span class="button-checkbox">
 					<!-- <button type="button" class="btn" data-color="info">Recuerdame</button>
                     <input type="checkbox" name="remember_me" id="remember_me" checked="checked" class="hidden"> -->
-					<a href="" class="btn btn-link pull-right">Olvide mi Password?</a>
+					<!-- <a href="" class="btn btn-link pull-right">Olvide mi Password?</a> -->
 				</span>
 				<hr class="colorgraph">
 				<div class="row">
