--- a/Angular_SICDOC/sicdoc/src/app/views/contactos/contactos.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/contactos/contactos.component.html
@@ -53,6 +53,7 @@
           <!-- Fin de Tabla de Contactos -->
 
             <!-- Modal Detalle de la Comunicacion Seleccionada -->
+            <!-- Loader de Carga de los Datos -->
             <div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
                   data-backdrop="static" data-keyboard="false" >
             	<div class="modal-dialog modal-lg">
@@ -60,31 +61,41 @@
             			<div class="modal-header">
             				<button type="button" class="close" data-dismiss="modal" aria-hidden="true"> <i class="material-icons">close</i> </button>
             				<h4 class="modal-title" id="myModalLabel">{{ newTittle }}</h4>
+                    <div id="loader-2" *ngIf="loading_table == 'show' " style="margin-left:35%; margin-top:5%;">
+                      <img src="assets/images/30.gif" alt="Cargando Tareas">
+                    </div>
                   </div>
 
             			<div class="modal-body">
+                    <hr class="colorgraph">
                       <form #contactForm="ngForm" (ngSubmit)="onSubmit(contactForm)" name="contactForm" role="form">
                         <h4>Datos Personales</h4>
                         <div class="row">
                           <!-- Seccion de Nomnres de Contacto -->
                           <div class="col-xs-3 col-md-3 col-lg-3">
                             <label for="exampleInputEmail1">Primer Nombre</label>
-                            <input type="text" class="form-control" id="validationDefault01" placeholder="Primer Nombre" value="">
+                            <input #nombre1Contacto="ngModel" type="text" class="form-control" name="nombre1Contacto"  id="nombre1Contacto" placeholder="Primer Nombre"
+                                [(ngModel)]="consultaContactos.nombre1Contacto" required >
+                            <small class="form-text text-muted" *ngIf="nombre1Contacto.errors?.required" >Ingresa el Primer Nombre de Contacto</small>
                           </div>
                           <div class="col-xs-3 col-md-3 col-lg-3">
                             <label for="exampleInputEmail1">Segundo Nombre</label>
-                            <input type="text" class="form-control" id="validationDefault01" placeholder="Segundo Nombre" value="">
+                            <input #nombre2Contacto="ngModel" type="text" class="form-control" name="nombre2Contacto" id="nombre2Contacto" placeholder="Segundo Nombre"
+                                [(ngModel)]="consultaContactos.nombre2Contacto">
                           </div>
                         <!-- </div> -->
                         <!-- <div class="row"> -->
                           <!-- Seccion de Apellidos -->
                           <div class="col-xs-3 col-md-3 col-lg-3">
                             <label for="exampleInputEmail1">Primer Apellido</label>
-                            <input type="text" class="form-control" id="validationDefault01" placeholder="Primer Apellido" value="">
+                            <input #apellido1Contacto="ngModel" type="text" class="form-control" name="apellido1Contacto" id="apellido1Contacto" placeholder="Primer Apellido"
+                                [(ngModel)]="consultaContactos.apellido1Contacto" required>
+                            <small class="form-text text-muted" *ngIf="apellido1Contacto.errors?.required" >Ingresa el Primer Apellido de Contacto</small>
                           </div>
                           <div class="col-xs-3 col-md-3 col-lg-3">
                             <label for="exampleInputEmail1">Segundo Apellido</label>
-                            <input type="text" class="form-control" id="validationDefault01" placeholder="Segundo Apellido" value="">
+                            <input #apellido2Contacto="ngModel" type="text" class="form-control" name="apellido2Contacto" id="apellido2Contacto" placeholder="Segundo Apellido"
+                                [(ngModel)]="consultaContactos.apellido2Contacto" >
                           </div>
                         </div>
                         <hr>
@@ -93,11 +104,14 @@
                         <div class="row">
                           <div class="col-xs-4 col-md-4 col-lg-4">
                             <label for="exampleInputEmail1">Primer Correo</label>
-                            <input type="mail" class="form-control" id="validationDefault01" placeholder="name@example.com" value="">
+                            <input #email1Contacto="ngModel" type="mail" class="form-control" name="email1Contacto" id="email1Contacto" placeholder="name@example.com"
+                              [(ngModel)]="consultaContactos.email1Contacto" required>
+                          <small class="form-text text-muted" *ngIf="email1Contacto.errors?.required" >Ingresa el Correo de Contacto</small>
                           </div>
                           <div class="col-xs-4 col-md-4 col-lg-4">
                             <label for="exampleInputEmail1">Segundo Correo</label>
-                            <input type="mail" class="form-control" id="validationDefault01" placeholder="name@example.com" value="">
+                            <input #email2Contacto="ngModel" type="mail" class="form-control" name="email2Contacto" id="email2Contacto" placeholder="name@example.com"
+                                [(ngModel)]="consultaContactos.email2Contacto">
                           </div>
                         </div>
 
@@ -105,14 +119,21 @@
                         <!-- Seccion de Telefonia -->
                         <h4>Datos de Telefonia</h4>
                         <div class="row">
-                          <div class="col-xs-4 col-md-4 col-lg-4">
-                            <label for="exampleInputEmail1">Telefono</label>
-                            <input type="text" class="form-control" id="validationDefault01" placeholder="22060200" value="">
-                          </div>
+                          <!-- Celular de Contacto -->
                           <div class="col-xs-4 col-md-4 col-lg-4">
                             <label for="exampleInputEmail1">Celular</label>
-                            <input type="text" class="form-control" id="validationDefault01" placeholder="99889988" value="">
+                            <input #celularContacto="ngModel" type="text" class="form-control" name="celularContacto" id="validationDefault01" placeholder="99889988"
+                                [(ngModel)]="consultaContactos.celularContacto" required>
+                            <small class="form-text text-muted" *ngIf="celularContacto.errors?.required" >Ingresa el No. de Celular</small>
                           </div>
+
+                          <!-- Telefono Fijo -->
+                          <div class="col-xs-4 col-md-4 col-lg-4">
+                            <label for="exampleInputEmail1">Telefono</label>
+                            <input #email2Contacto="ngModel" type="text" class="form-control" name="telefonoContacto" id="telefonoContacto" placeholder="22060200"
+                                [(ngModel)]="consultaContactos.telefonoContacto" >
+                          </div>
+
                         </div>
 
                         <hr>
@@ -120,27 +141,71 @@
                         <h4>Datos de Relaciones</h4>
                         <div class="row">
                           <!-- Institucion de Contacto-->
-                          <div class="col-xs-12 col-sm-6 col-md-4">
+                          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8">
                   					<div class="form-group">
-                              <!-- <select #idInstitucion="ngModel" class="form-control" name="idInstitucion" id="idInstitucion"
-                                    ngControl="idTipoInstitucion" [(ngModel)]="comunicacion.idTipoInstitucion" (change)="getlistaInstituciones()" >
-                                  <option value="0" >Tipo de Institución</option>
-                                  <option *ngFor="let list of JsonOutgetlistaTipoInstitucion" value="{{ list.idTipoInstitucion }}">{{ list.descTipoInstitucion }}</option>
-                              </select>
-                              <small class="form-text text-muted" *ngIf="idTipoInstitucion.value == 0 || idTipoInstitucion.value == null " >Debes Seleccionar un tipo de Institución</small> -->
-                             <ng2-completer inputClass="form-control"  fieldTabindex="true" name="colors"
-                                 [(ngModel)]="searchStr" inputId="1"
+                            <!-- Instituciones que sera de Contacto -->
+                             <ng2-completer inputClass="form-control"  fieldTabindex="true" name="idInstitucion"
+                                 [(ngModel)]="searchStr" inputId="1" required
                                  [datasource]="dataService" [minSearchLength]="2" textSearching="Buscando ..."
                                  textNoResults="No se han encontrado nada ..."
                                  placeholder="Selecciona una Institucion" (selected)="onSelected($event)" >
                              </ng2-completer>
-                              <p>Selected: {{selectedColor}}</p>
+                              <p>Selected: {{selectedInstitucion}}</p>
+                            </div>
+                            <!-- Funcionario de Contacto de SRECI -->
+                            <div class="form-group">
+                             <ng2-completer inputClass="form-control"  fieldTabindex="true" name="idContactoSreci"
+                                 [(ngModel)]="searchStrFunc" inputId="2" required
+                                 [datasource]="dataServiceFunc" [minSearchLength]="2" textSearching="Buscando ..."
+                                 textNoResults="No se han encontrado nada ..."
+                                 placeholder="Selecciona un Funcionario de Conatcto" (selected)="onSelectedFunc($event)" >
+                             </ng2-completer>
+                              <p>Selected: {{selectedFuncionario}}</p>
                             </div>
                   				</div>
-
-
                         </div>
-                        <!-- <button class="btn btn-primary" type="submit">Submit form</button> -->
+
+                        <hr>
+                        <!-- Seccion de Anexos -->
+                        <h4>Anexos</h4>
+                        <div class="row">
+                          <div class="col-xs-12 col-md-4 col-lg-6">
+                            <label for="exampleInputEmail1">Perfil de Contacto</label>
+                            <input #pdfDocumento="ngModel" type="file" class="form-control-file" id="pdfDocumento" name="pdfDocumento"
+                                 ngControl="pdfDocumento" [(ngModel)]="consultaContactos.pdfDocumento" placeholder="Subir Pdf ..."
+                                 aria-describedby="fileHelp" (change)="fileChangeEvent($event)">
+
+                                 <!-- Barra de Progreso de Carga de la Imagen -->
+                                 <div class="progress">
+                                     <div id="upload-progress-bar" class="progress-bar progress-bar-success"
+                                         role="progressbar"
+                                         aria-valuenow="0"
+                                         aria-valuemin="0"
+                                         aria-valuemax="0"
+                                         style="width:1%">
+                                     </div>
+                                 </div>
+                                 <p id="status"></p>
+
+                            <!-- <image-upload url="http://172.17.3.90/sicdoc/symfony/web/uploads/contactos/imagen" [max]="2" [extensions]="['jpeg','png']"></image-upload> -->
+                          </div>
+                          <div class="col-xs-12 col-md-4 col-lg-6">
+                            <label for="exampleInputEmail1">Imagen de Contacto</label>
+                            <input #imgDocumento="ngModel" type="file" class="form-control-file" id="imgDocumento" name="imgDocumento"
+                                 ngControl="imgDocumento" [(ngModel)]="consultaContactos.imgDocumento" placeholder="Subir Pdf ..."
+                                 aria-describedby="fileHelp">
+                          </div>
+                        </div>
+
+                        <hr class="colorgraph">
+                        <div class="row">
+
+                  				<div class="col-xs-12 col-md-3">
+                            <input type="submit" value="Guardar" class="btn btn-primary btn-block btn-lg" tabindex="17"
+                                [disabled]="!contactForm.valid" >
+                          </div>
+                        </div>
+                        <!-- <button class="btn btn-primary" type="submit" [disabled]="!ingresoComunicacionForm.valid">Submit form</button> -->
                     </form>
                     </div>
             		</div><!-- /.modal-content -->
