--- a/Angular_SICDOC/sicdoc/src/app/views/login/login.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/login/login.component.html
@@ -6,7 +6,7 @@
     <img src="assets/images/aguarde.gif" alt="Cargando Tareas">
   </div>
 <div class="row">
-    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+    <div class="col-xs-12 col-sm-8 col-md-6 col-lg-6 col-sm-offset-2 col-md-offset-3">
 		<form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)" name="loginForm" role="form">
 			<fieldset>
 				<h2>{{ titulo }}</h2>
